[specctrCloud] - Fixed the off center panel issue.

--- a/ExtensionContent/css/style.css
+++ b/ExtensionContent/css/style.css
@@ -344,7 +344,8 @@ label {
 }
 
 .menu {
-	margin: 15px 8px 0px 8px;
+	margin-top: 15px;
+	margin-bottom: 0px;
 }
 
 .menu li {
@@ -352,6 +353,16 @@ label {
 	font-family: aauxPro;
 	font-size: 13px;
 	margin-top: 6px;
+}
+
+.menuSideMarginWithBorder {
+	margin-left: 8px;
+	margin-right: 8px;
+}
+
+.menuSideMarginWithOutBorder {
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .button {
